[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprites/BossRooms/MaidenBossRoom/spikeAttack.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/MaidenBoss/MaidenBossSpikeAttack.gd" type="Script" id=2]

[node name="MaidenBossSpikeAttack" type="Node2D"]
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = -21.0
margin_right = 40.0
margin_bottom = 19.0
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_right = 12

[node name="Tentacle" type="Area2D" parent="."]
position = Vector2( 20, 0 )
collision_layer = 16
collision_mask = 3

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="body_entered" from="Tentacle" to="." method="_on_Tentacle_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
